# sparqy

./: .gitignore  CMakeLists.txt  CONFIG_REFERENCE.md  LICENSE  README.md
build-review/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  config_loader_test  sparqy
build-review/Testing/Temporary/: CTestCostData.txt
examples/: complex_dfe_showcase.sparqy  full_power_model.sparqy  minimal_additive.sparqy  minimal_fixed_dominance.sparqy  stats_schedule_showcase.sparqy
examples/slim/: complex_dfe_showcase.slim  full_power_model.slim  minimal_additive.slim  minimal_fixed_dominance.slim  stats_schedule_showcase.slim
src/: alias_sampler.hpp  config_loader.cpp  config_loader.hpp  dist_spec.hpp  dominance_spec.hpp  main.cpp  rng.hpp  sparqy.cpp  sparqy.hpp  sparqy_compile.cpp  sparqy_names.hpp  sparqy_slim_export.cpp  sparqy_statistics.cpp  sparse_count_map.hpp
tests/: alias_bench.cpp  config_loader_bench.cpp  config_loader_test.cpp  run_example_configs_smoke.sh  run_example_slim_smoke.sh  run_slim_export_roundtrip.sh  slim_export_roundtrip.sparqy
validation_suite/: __init__.py  compare_example_pairs.py  perlmutter_extreme_suite.sh  perlmutter_full_suite.sh  plot_poster_figures.py  plot_results.py  run_suite.py  scenarios.py
